5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4481/executions/1644_1053.log
== TEST (2019-04-09 17:05:44) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir 
patrono=input("qual o nome da sua magia")
if(patrono==cervo):
	mensagem="cervo eh patrono do Harry Potter"
else:
	mensagem=patrono"nao eh patrono do Harry"
print(mensagem.lower())

-- ERROR:
File "XXXX", line 8
    mensagem=patrono"nao eh patrono do Harry"
                                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 17:05:57) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir 
patrono=input("qual o nome da sua magia")
if(patrono==cervo):
	mensagem="cervo eh patrono do Harry Potter"
else:
	mensagem=patrono+"nao eh patrono do Harry"
print(mensagem.lower())

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if(patrono==cervo):
NameError: name 'cervo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 17:06:21) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir 
patrono=input("qual o nome da sua magia")
if(patrono==cervo):
	mensagem="cervo eh patrono do Harry Potter"
else:
	mensagem=patrono+"nao eh patrono do Harry"
print(mensagem.lower())

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if(patrono==cervo):
NameError: name 'cervo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 17:06:50) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir 
patrono=input("qual o nome da sua magia")
if(patrono=="cervo"):
	mensagem="cervo eh patrono do Harry Potter"
else:
	mensagem=patrono+"nao eh patrono do Harry"
print(mensagem.lower())

-- OUTPUT:
cervo eh patrono do harry potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 17:07:16) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir 
patrono=input("qual o nome da sua magia")
if(patrono=="cervo"):
	mensagem="cervo eh patrono do Harry Potter"
else:
	mensagem=patrono+"nao eh patrono do Harry"
print(mensagem.lower())

-- EXECUTION TIME:
0.131849
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do harry potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bodenao eh patrono do harry
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 17:07:40) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir 
patrono=input("qual o nome da sua magia")
if(patrono== "cervo"):
	mensagem="cervo eh patrono do Harry Potter"
else:
	mensagem=patrono+"nao eh patrono do Harry"
print(mensagem.lower())

-- OUTPUT:
cervo eh patrono do harry potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 17:07:54) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir 
patrono=input("qual o nome da sua magia")
if(patrono== "cervo"):
	mensagem="cervo eh patrono do Harry Potter"
else:
	mensagem=patrono+"nao eh patrono do Harry"
print(mensagem.lower())

-- EXECUTION TIME:
0.206826
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do harry potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bodenao eh patrono do harry
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 17:08:04) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir 
patrono=input("qual o nome da sua magia")
if(patrono== "cervo"):
	mensagem="cervo eh patrono do Harry Potter"
else:
	mensagem=patrono+"nao eh patrono do Harry"
print(mensagem)

-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 17:08:13) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir 
patrono=input("qual o nome da sua magia")
if(patrono== "cervo"):
	mensagem="cervo eh patrono do Harry Potter"
else:
	mensagem=patrono+"nao eh patrono do Harry"
print(mensagem)

-- EXECUTION TIME:
0.202339
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bodenao eh patrono do Harry
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 17:08:46) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir 
patrono=input("qual o nome da seu patrono? ")
if(patrono== "cervo"):
	mensagem="cervo eh patrono do Harry Potter"
else:
	mensagem=patrono+"nao eh patrono do Harry"
print(mensagem)

-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 17:08:55) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir 
patrono=input("qual o nome da seu patrono? ")
if(patrono== "cervo"):
	mensagem="cervo eh patrono do Harry Potter"
else:
	mensagem=patrono+"nao eh patrono do Harry"
print(mensagem)

-- EXECUTION TIME:
0.155994
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bodenao eh patrono do Harry
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 17:11:23) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir 
patrono = input("qual o nome da seu patrono? ")
if(patrono == "cervo"):
	mensagem = "cervo eh patrono do Harry Potter"
else:
	mensagem=patrono = "nao eh patrono do Harry"
print(mensagem)

-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 17:11:33) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir 
patrono = input("qual o nome da seu patrono? ")
if(patrono == "cervo"):
	mensagem = "cervo eh patrono do Harry Potter"
else:
	mensagem=patrono = "nao eh patrono do Harry"
print(mensagem)

-- EXECUTION TIME:
0.144577
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
nao eh patrono do Harry
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 17:13:13) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir 
patrono = input("qual e o nome do patrono")
if(patrono == "cervo"):
	mensagem = "cervo eh patrono do Harry Potter"
else:
	mensagem=patrono = "nao eh patrono do Harry"
print(mensagem)

-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 17:13:20) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir 
patrono = input("qual e o nome do patrono")
if(patrono == "cervo"):
	mensagem = "cervo eh patrono do Harry Potter"
else:
	mensagem=patrono = "nao eh patrono do Harry"
print(mensagem)

-- EXECUTION TIME:
0.210602
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
nao eh patrono do Harry
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 17:14:00) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir 
patrono = input("qual e o nome do patrono")
if(patrono !="cervo" ):
	mensagem = "cervo eh patrono do Harry Potter"
else:
	mensagem=patrono = "nao eh patrono do Harry"
print(mensagem)

-- OUTPUT:
nao eh patrono do Harry
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 17:14:07) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir 
patrono = input("qual e o nome do patrono")
if(patrono !="cervo" ):
	mensagem = "cervo eh patrono do Harry Potter"
else:
	mensagem=patrono = "nao eh patrono do Harry"
print(mensagem)

-- EXECUTION TIME:
0.142092
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
nao eh patrono do Harry
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 17:14:12) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir 
patrono = input("qual e o nome do patrono")
if(patrono != "cervo" ):
	mensagem = "cervo eh patrono do Harry Potter"
else:
	mensagem=patrono = "nao eh patrono do Harry"
print(mensagem)

-- OUTPUT:
nao eh patrono do Harry
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 17:14:14) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir 
patrono = input("qual e o nome do patrono")
if(patrono != "cervo" ):
	mensagem = "cervo eh patrono do Harry Potter"
else:
	mensagem=patrono = "nao eh patrono do Harry"
print(mensagem)

-- EXECUTION TIME:
0.127666
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
nao eh patrono do Harry
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 17:18:33) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir 
patrono = input("qual e o nome do patrono")
if (patrono != "cervo" ):
	mensagem = "cervo eh patrono do Harry Potter"
else:
	mensagem=patrono = "nao eh patrono do Harry"
print(mensagem)

-- OUTPUT:
nao eh patrono do Harry
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 17:18:39) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir 
patrono = input("qual e o nome do patrono")
if (patrono != "cervo" ):
	mensagem = "cervo eh patrono do Harry Potter"
else:
	mensagem=patrono = "nao eh patrono do Harry"
print(mensagem)

-- EXECUTION TIME:
0.136411
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
nao eh patrono do Harry
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 17:18:52) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir 
patrono = input("qual e o nome do patrono")
if (patrono == "cervo" ):
	mensagem = "cervo eh patrono do Harry Potter"
else:
	mensagem=patrono = "nao eh patrono do Harry"
print(mensagem)

-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 17:18:57) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir 
patrono = input("qual e o nome do patrono")
if (patrono == "cervo" ):
	mensagem = "cervo eh patrono do Harry Potter"
else:
	mensagem=patrono = "nao eh patrono do Harry"
print(mensagem)

-- EXECUTION TIME:
0.158555
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
nao eh patrono do Harry
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 17:19:37) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir 
patrono = input("qual e o nome do seu patrono? ")
if (patrono == "cervo" ):
	mensagem = "cervo eh patrono do Harry Potter"
else:
	mensagem=patrono = "nao eh patrono do Harry"
print(mensagem)

-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 17:19:43) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir 
patrono = input("qual e o nome do seu patrono? ")
if (patrono == "cervo" ):
	mensagem = "cervo eh patrono do Harry Potter"
else:
	mensagem=patrono = "nao eh patrono do Harry"
print(mensagem)

-- EXECUTION TIME:
0.160581
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
nao eh patrono do Harry
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 17:20:01) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir 
patrono = input("qual e o nome do seu patrono? ")
if (patrono == "cervo"):
	mensagem = "cervo eh patrono do Harry Potter"
else:
	mensagem=patrono = "nao eh patrono do Harry"
print(mensagem)

-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 17:20:08) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir 
patrono = input("qual e o nome do seu patrono? ")
if (patrono == "cervo"):
	mensagem = "cervo eh patrono do Harry Potter"
else:
	mensagem=patrono = "nao eh patrono do Harry"
print(mensagem)

-- EXECUTION TIME:
0.185822
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
nao eh patrono do Harry
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 17:21:28) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir 
patrono = input("qual e o nome do seu patrono? ")
if (patrono ==cervo):
	mensagem = "cervo eh patrono do Harry Potter"
else:
	mensagem=patrono = "nao eh patrono do Harry"
print(mensagem)

-- EXECUTION TIME:
0.128754
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1644/1053/main.py", line 5, in <module>
    if (patrono ==cervo):
NameError: name 'cervo' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 17:38:36) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir 
patrono = input("qual e o nome do seu patrono? ")
if (patrono =="cervo"):
	mensagem = "cervo eh patrono do Harry Potter"
else:
	mensagem=patrono = "nao eh patrono do Harry"
print(mensagem)

-- EXECUTION TIME:
0.161541
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
nao eh patrono do Harry
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 17:38:37) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir 
patrono = input("qual e o nome do seu patrono? ")
if (patrono =="cervo"):
	mensagem = "cervo eh patrono do Harry Potter"
else:
	mensagem=patrono = "nao eh patrono do Harry"
print(mensagem)

-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 17:38:49) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir 
patrono = input("qual e o nome do seu patrono? ")
if (patrono =="cervo"):
	mensagem = "cervo eh patrono do Harry Potter"
else:
	mensagem=patrono = "nao eh patrono do Harry"
print(mensagem)

-- EXECUTION TIME:
0.159783
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
nao eh patrono do Harry
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 17:39:22) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir 
patrono = input("qual e o nome do seu patrono? ")
if (patrono =="cervo"):
	mensagem = "cervo eh patrono do Harry Potter"
else:
	mensagem=patrono = "nao eh patrono do Harry Potter"
print(mensagem)

-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 17:39:29) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir 
patrono = input("qual e o nome do seu patrono? ")
if (patrono =="cervo"):
	mensagem = "cervo eh patrono do Harry Potter"
else:
	mensagem=patrono = "nao eh patrono do Harry Potter"
print(mensagem)

-- EXECUTION TIME:
0.136492
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
nao eh patrono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 17:42:20) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir 
patrono = input("qual e o nome do seu patrono? ")
if (patrono == "cervo"):
	mensagem = ("cervo eh patrono do Harry Potter") 
else:
	mensagem=patrono+"nao eh patrono do harry Potter"
-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 17:43:11) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir 
patrono = input("qual e o nome do seu patrono? ")
if (patrono == "cervo"):
	mensagem = ("cervo eh patrono do Harry Potter") 
else:
	mensagem=patrono+("nao eh patrono do harry Potter")
print(mensagem.lower())
-- OUTPUT:
cervo eh patrono do harry potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 17:43:20) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir 
patrono = input("qual e o nome do seu patrono? ")
if (patrono == "cervo"):
	mensagem = ("cervo eh patrono do Harry Potter") 
else:
	mensagem=patrono+("nao eh patrono do harry Potter")
print(mensagem.lower())
-- EXECUTION TIME:
0.279628
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do harry potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bodenao eh patrono do harry potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 17:43:43) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir 
patrono = input("qual e o nome do seu patrono? ")
if (patrono == "cervo"):
	mensagem = "cervo eh patrono do Harry Potter"
else:
	mensagem=patrono+"nao eh patrono do harry Potter"
print(mensagem.lower())
-- OUTPUT:
cervo eh patrono do harry potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 17:43:45) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir 
patrono = input("qual e o nome do seu patrono? ")
if (patrono == "cervo"):
	mensagem = "cervo eh patrono do Harry Potter"
else:
	mensagem=patrono+"nao eh patrono do harry Potter"
print(mensagem.lower())
-- EXECUTION TIME:
0.183541
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do harry potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bodenao eh patrono do harry potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 17:47:04) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir 
patrono = input("qual o nome do seu patrono? ")
if(patrono=="cervo"):
	mensagem="cervo eh patrono do Harry Potter "
else:
	mensagem=patrono+"nao eh patrono do Harry Potter" 
print(mensagem.lower())

-- OUTPUT:
cervo eh patrono do harry potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 17:47:12) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir 
patrono = input("qual o nome do seu patrono? ")
if(patrono=="cervo"):
	mensagem="cervo eh patrono do Harry Potter "
else:
	mensagem=patrono+"nao eh patrono do Harry Potter" 
print(mensagem.lower())

-- EXECUTION TIME:
0.150612
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do harry potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bodenao eh patrono do harry potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 17:47:17) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir 
patrono = input("qual o nome do seu patrono? ")
if(patrono=="cervo"):
	mensagem="cervo eh patrono do Harry Potter "
else:
	mensagem=patrono+"nao eh patrono do Harry Potter" 
print(mensagem.lower())

-- OUTPUT:
cervo eh patrono do harry potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 17:47:44) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir 
patrono = input("qual o nome do seu patrono? ")
if(patrono=="cervo"):
	mensagem="cervo eh patrono do Harry Potter "
else:
	mensagem=patrono+"nao eh patrono do Harry Potter" 
print(mensagem.lower())

-- OUTPUT:
cervo eh patrono do harry potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 17:48:28) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir 
patrono = input("qual o nome do seu patrono? ")
if(patrono=="cervo"):
	mensagem="cervo eh patrono do Harry Potter "
else:
	mensagem=patrono+"nao eh patrono do Harry Potter" 
print(mensagem.lower())

-- OUTPUT:
cervo eh patrono do harry potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 17:49:24) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir 
patrono = input("qual o nome do seu patrono? ")
if(patrono=="cervo"):
	mensagem="cervo eh patrono do Harry Potter "
else:
	mensagem=patrono+" nao eh patrono do Harry Potter" 
print(mensagem.lower())

-- OUTPUT:
cervo eh patrono do harry potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 17:49:31) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir 
patrono = input("qual o nome do seu patrono? ")
if(patrono=="cervo"):
	mensagem="cervo eh patrono do Harry Potter "
else:
	mensagem=patrono+" nao eh patrono do Harry Potter" 
print(mensagem.lower())

-- OUTPUT:
cervo eh patrono do harry potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 17:49:39) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir 
patrono = input("qual o nome do seu patrono? ")
if(patrono=="cervo"):
	mensagem="cervo eh patrono do Harry Potter "
else:
	mensagem=patrono+" nao eh patrono do Harry Potter" 
print(mensagem.lower())

-- EXECUTION TIME:
0.205122
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do harry potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do harry potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 17:50:02) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir 
patrono = input("qual o nome do seu patrono? ")
if(patrono=="cervo"):
	mensagem="cervo eh patrono do Harry Potter "
else:
	mensagem=patrono+" nao eh patrono do Harry Potter" 
print(mensagem)

-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 17:50:08) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir 
patrono = input("qual o nome do seu patrono? ")
if(patrono=="cervo"):
	mensagem="cervo eh patrono do Harry Potter "
else:
	mensagem=patrono+" nao eh patrono do Harry Potter" 
print(mensagem)

-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 17:50:15) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir 
patrono = input("qual o nome do seu patrono? ")
if(patrono=="cervo"):
	mensagem="cervo eh patrono do Harry Potter "
else:
	mensagem=patrono+" nao eh patrono do Harry Potter" 
print(mensagem)

-- EXECUTION TIME:
0.207455
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do Harry Potter
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
